reset folder path in ts config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,31 +37,31 @@
     // "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
     /* Module Resolution Options */
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
-    "baseUrl": "." /* Base directory to resolve non-absolute module names. */,
+    "baseUrl": "./src/app/" /* Base directory to resolve non-absolute module names. */,
     "paths": {
-      "@assets/*": ["./src/app/assets/*"],
-      "@common": ["./src/app/common/index"],
-      "@hooks": ["./src/app/common/hooks/index"],
-      "@native-module": ["./src/app/common/native-module/index"],
-      "@validate/*": ["./src/app/common/yup-validate/*"],
-      "@listener": ["./src/app/common/redux/listener.ts"],
-      "@animated": ["./src/app/common/animated/index"],
-      "@config/*": ["./src/app/config/*"],
-      "@features/*": ["./src/app/features/*"],
-      "@components": ["./src/app/library/components/index"],
-      "@components/*": ["./src/app/library/components/*"],
-      "@utils/*": ["./src/app/library/utils/*"],
-      "@storage": ["./src/app/library/utils/storage/index"],
-      "@networking": ["./src/app/library/networking/index"],
-      "@networking/*": ["./src/app/library/networking/*"],
-      "@model/*": ["./src/app/model/*"],
-      "@navigation/*": ["./src/app/navigation/*"],
-      "@store/*": ["./src/app/redux/store/*"],
-      "@redux-slice": ["./src/app/redux/action-slice/index"],
-      "@redux-action-type/*": ["./src/app/redux/action-type/*"],
-      "@theme": ["./src/app/themes/index"],
-      "@theme/*": ["./src/app/themes/*"],
-      "@transition": ["./src/app/transition/index"]
+      "@assets/*": ["assets/*"],
+      "@common": ["common/index"],
+      "@hooks": ["common/hooks/index"],
+      "@native-module": ["common/native-module/index"],
+      "@validate/*": ["common/yup-validate/*"],
+      "@listener": ["common/redux/listener.ts"],
+      "@animated": ["common/animated/index"],
+      "@config/*": ["config/*"],
+      "@features/*": ["features/*"],
+      "@components": ["library/components/index"],
+      "@components/*": ["library/components/*"],
+      "@utils/*": ["library/utils/*"],
+      "@storage": ["library/utils/storage/index"],
+      "@networking": ["library/networking/index"],
+      "@networking/*": ["library/networking/*"],
+      "@model/*": ["model/*"],
+      "@navigation/*": ["navigation/*"],
+      "@store/*": ["redux/store/*"],
+      "@redux-slice": ["redux/action-slice/index"],
+      "@redux-action-type/*": ["redux/action-type/*"],
+      "@theme": ["themes/index"],
+      "@theme/*": ["themes/*"],
+      "@transition": ["transition/index"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
