--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^8.0.2",
+    "redux-logger": "^3.0.6",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -65,6 +66,7 @@
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-redux": "^7.1.22",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "babel-jest": "^26.6.3",
