--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-blurhash": "^1.1.10",
     "react-native-bootsplash": "^4.1.5",
     "react-native-config": "^1.4.5",
+    "react-native-date-picker": "^4.2.5",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-linear-gradient": "^2.5.6",
