--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-section-alphabet-list": "^2.1.0",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^8.0.2",
