chore(mobile): use aws s3 for image & video upload

--- a/ios/HelloWorld/Info.plist
+++ b/ios/HelloWorld/Info.plist
@@ -20,6 +20,8 @@
 	<string>${VERSION_NAME}</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) would like access to your photo gallery.</string>
 	<key>CFBundleVersion</key>
 	<string>${VERSION_CODE}</string>
 	<key>LSRequiresIPhoneOS</key>
