--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.0",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^9.0.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.2",
+    "aws-amplify": "^4.3.34",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "i18next": "^20.4.0",
@@ -48,6 +50,7 @@
     "react-native-fast-image": "^8.5.11",
     "react-native-flatlist-alphabet": "^1.1.2",
     "react-native-gesture-handler": "^2.4.2",
+    "react-native-image-picker": "^4.10.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-mmkv": "^2.4.1",
     "react-native-reanimated": "^2.8.0",
@@ -55,6 +58,7 @@
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
+    "react-native-video": "^5.2.0",
     "react-redux": "^8.0.2",
     "redux-logger": "^3.0.6",
     "yup": "^0.32.11"
@@ -68,6 +72,7 @@
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.67.3",
     "@types/react-native-vector-icons": "^6.4.10",
+    "@types/react-native-video": "^5.0.14",
     "@types/react-redux": "^7.1.22",
     "@types/react-test-renderer": "^17.0.1",
     "@types/redux-logger": "^3.0.9",
