--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "i18next": "^20.4.0",
+    "metro-config": "^0.72.1",
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-fast-compare": "^3.2.0",
@@ -57,6 +58,7 @@
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-video": "^5.2.0",
     "react-redux": "^8.0.2",
@@ -70,6 +72,7 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/metro-config": "^0.66.0",
     "@types/react-native": "^0.67.3",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-native-video": "^5.0.14",
