--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-blurhash": "^1.1.10",
     "react-native-bootsplash": "^4.1.5",
     "react-native-config": "^1.4.5",
+    "react-native-create-thumbnail": "^1.6.0",
     "react-native-date-picker": "^4.2.5",
     "react-native-fast-image": "^8.5.11",
     "react-native-flatlist-alphabet": "^1.1.2",
