--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "metro-react-native-babel-preset": "^0.67.0",
     "patch-package": "^6.4.7",
     "prettier": "^2.3.0",
+    "react-native-dotenv": "^3.3.1",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
   },
