--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native": "0.68.2",
     "react-native-blurhash": "^1.1.10",
     "react-native-bootsplash": "^4.1.5",
+    "react-native-camera": "^4.2.1",
     "react-native-config": "^1.4.5",
     "react-native-create-thumbnail": "^1.6.0",
     "react-native-date-picker": "^4.2.5",
