--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-image-picker": "^4.10.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-mmkv": "^2.4.1",
+    "react-native-paper": "^4.12.4",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
