--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-mmkv": "^2.4.1",
     "react-native-paper": "^4.12.4",
+    "react-native-permissions": "^3.6.1",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
