--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@babel/plugin-transform-named-capturing-groups-regex": "^7.19.0",
     "@hookform/resolvers": "^2.9.0",
+    "@legendapp/motion": "^2.2.0",
     "@miblanchard/react-native-slider": "^2.1.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/cameraroll": "^4.1.2",
@@ -63,6 +64,7 @@
     "react-native-paper": "^4.12.4",
     "react-native-permissions": "^3.6.1",
     "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
