--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-fast-image": "^8.5.11",
     "react-native-flatlist-alphabet": "^1.1.2",
     "react-native-gesture-handler": "^2.4.2",
+    "react-native-highlight-words": "^1.0.1",
     "react-native-image-picker": "^4.10.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-mmkv": "^2.4.1",
